@@ -1,3 +1,8 @@
+2009-07-30  Veerapuram Varadhan  <vvaradhan@novell.com>
+
+	* SqlDataAdapter.cs (IDbDataAdapter.*Command): Remove over-engineered 
+	checks as the base implementation is changed.
+	
 2009-07-29  Veerapuram Varadhan  <vvaradhan@novell.com>
 
 	* SqlDataAdapter.cs (IDbDataAdapter.*Command): Revert some of my earlier
